tests/nested_type_disallowed_const_bad.stderr
tests/nested_type_disallowed_const_bad.hop:3:5: error: HOP1004: unexpected token
