tests/nested_type_disallowed_const_bad.hop
// Verifies nested type disallowed const is rejected.
struct Thing {
    const Max = 1
}
